<resources>
    <string name="app_name">InventoryApp</string>
    <string name="product_name">There is no product name provided</string>
    <string name="quantity">There is no quantity provided</string>
    <string name="price">There is no price available</string>
    <string name="action_delete_all_entries">delete whole database</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="editor_activity_title_new_inventory">Add an inventory</string>

    <string name="category_input">Inventory information</string>

    <string name="inventory_saved">inventory saved with id</string>
    <string name="inventory_saving_error">Error with saving inventory</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding an inventory</string>

    <string name="edit_inventory">Edit inventory</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current inventory [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current inventory was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">Inventory deleted</string>

    <!-- Toast message in editor when current inventory has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>

    <!-- Dialog message to ask the user to confirm deleting the current inventory [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this inventory?</string>

    <!-- Dialog button text for the option to confirm deleting the current inventory [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current inventory [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="require_product_name">Inventory requires a name</string>
    <string name="require_price">Inventory requires a price</string>
    <string name="quantity_required">Quantity requires an input</string>
    <string name="hint_supplier_phone_number">Supplier Phonenumber</string>
    <string name="hint_product_price">Price</string>
    <string name="unit_product_quantity">Quantity</string>
    <string name="hint_supplier_name">Suppliername</string>
    <string name="hint_product_name">Productname</string>
    <string name="sale">Sale</string>
    <string name="sale_ok">Quantity increased</string>
    <string name="sale_failed">Quantity change failed</string>
    <string name="out_of_stock">Item quantity could not be lower than 0</string>
    <string name="call_supplier">Call supplier</string>
    <string name="quantity_add">Quantity +</string>
    <string name="quantity_substract">Quantity -</string>
    <string name="no_call_possible">No phone number or phone app available</string>
    <string name="all_data_required">Please give in all requested data</string>
</resources>
