<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_input" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Productname field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Suppliername field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- SupplierPhonenumber field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/unit_product_quantity"
                android:inputType="number" />
            <!-- Decrease quantity button -->
            <Button
                android:id="@+id/btn_decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_substract" />
            <!-- Increase quantity button -->
            <Button
                android:id="@+id/btn_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_add" />
            <!-- Call supplier button -->
            <Button
                android:id="@+id/btn_call_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_supplier" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
