<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of inventory -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <TextView
            android:id="@+id/price"
            style="@style/TextViewSmallStyle"
            android:text="@string/price" />

        <TextView
            android:id="@+id/quantity"
            style="@style/TextViewSmallStyle"
            android:text="@string/quantity" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/activity_margin"
        android:focusable="false"
        android:text="@string/sale"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />
</RelativeLayout>